--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <section id="intro">
         <h2>Your Health, Our Priority</h2>
-        <p>We provide the best medical care to ensure you live a healthy life.</p>
+        <p>We provide the best medical care to ensure you live a healthy and happy life.</p>
         <a href="services.html" class="cta" target="_parent">View Our Services</a>
     </section>
 
