--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
 
     <section id="contact">
         <h2>Contact Us</h2>
-        <p>Feel free to reach out to us for any inquiries or assistance. We are always here to help.</p>
+        <p>Feel free to reach out to us for any inquiries or assistance.Our services are always on time. </p>
         <p>Email: contact@Pwanihospital.com</p>
         <p>Phone: +254 799215167</p>
         <p>Address: 89 Kilifi Street, Kilifi Town</p>
