--- a/about.html
+++ b/about.html
@@ -20,9 +20,13 @@
 
     <section id="about">
         <h2>About Us</h2>
-        <p>Pwani Hospital has been serving the community for over 20 years. 
+        <p>
+            Pwani Hospital has been serving the community for over 20 years. 
             Our mission is to provide the best healthcare experience through compassion, innovation, and excellence.
-            Our medical team consists of highly trained professionals committed to your well-being of the members of the society.</p>
+         </p>
+        <p>
+            Our medical team consists of highly trained professionals committed to your well-being of the members of the society.   
+        </p>
         <img src="about-bg.jpg" alt="image is here" width="200" height="200"/>
     </section>
 
