--- a/services.html
+++ b/services.html
@@ -23,15 +23,22 @@
         <div class="service-list">
             <div class="service-item">
                 <h3>General Consultation</h3>
-                <p>Our doctors provide thorough medical evaluations for various health concerns.</p>
+                <p>
+                    Our doctors provide thorough medical evaluations for various health concerns. 
+                </p>
             </div>
             <div class="service-item">
                 <h3>Emergency Care</h3>
-                <p>We are equipped to handle medical emergencies 24/7.</p>
+                <p>
+                    We are equipped to handle medical emergencies 24/7.
+                </p>
             </div>
             <div class="service-item">
                 <h3>Laboratory Services</h3>
-                <p>Accurate and timely lab tests to assist in diagnosis and treatment.</p>
+                <p>
+                    Accurate and timely lab tests to assist in diagnosis and treatment.
+                    Our doctors also do run some test in order to evaluate and determine on what to treat.
+                </p>
             </div>
             <div class="service-item">
                 <h3>Surgery</h3>
