--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,9 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 Pwani Hospital. All rights reserved.</p>
+        <p>
+            &copy; 2024 Pwani Hospital. All rights reserved.
+        </p>
     </footer>
 </body>
 </html>
