--- a/services.html
+++ b/services.html
@@ -42,7 +42,7 @@
             </div>
             <div class="service-item">
                 <h3>Surgery</h3>
-                <p>State-of-the-art surgical facilities for both minor and major procedures.</p>
+                <p>State of the art surgical facilities for both minor and major procedures.</p>
             </div>
         </div>
     </section>
