--- a/services.html
+++ b/services.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Our Services</h1>
+        <h1 style ="color: red;background-color: blue;" >Our Services</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
