--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to Pwani Hospital.</h1>
+        <h1 style ="color: red;background-color: blue;">Welcome to Pwani Hospital.</h1>
         <nav>
             <ul>
                 <li><a href="services.html" target="_parent">Services</a></li>
