--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
     </header>
 
     <section id="about">
-        <h2>About Us</h2>
+        <h2 "color: blue;background-color: pink;">About Us</h2>
         <p>
             Pwani Hospital has been serving the community for over 20 years. 
         </p>
