--- a/services.html
+++ b/services.html
@@ -28,7 +28,7 @@
                 </p>
             </div>
             <div class="service-item">
-                <h3>Emergency Care</h3>
+                <h3 "color: white;background-color: blue;" >Emergency Care</h3>
                 <p>
                     We are equipped to handle medical emergencies 24/7.
                 </p>
