--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Contact Us</h1>
+        <h1"color:white; background-color: blue;">Contact Us</h1>
         <nav>
             <ul>
                 <li><a href="index.html"> Home </a></li>
