--- a/services.html
+++ b/services.html
@@ -19,7 +19,7 @@
     </header>
 
     <section id="services">
-        <h2>Our Services</h2>
+        <h2 style ="color: white;background-color: blue;>Our Services</h2>
         <div class="service-list">
             <div class="service-item">
                 <h3>General Consultation</h3>
