--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1 style ="color: red;background-color: blue;">Welcome to Pwani Hospital.</h1>
+        <h1 style ="color: red;background-color: violet;">Welcome to Pwani Hospital.</h1>
         <nav>
             <ul>
                 <li><a href="services.html" target="_parent">Services</a></li>
@@ -19,7 +19,7 @@
     </header>
 
     <section id="intro">
-        <h2 "color: red;background-color: blue;" >Your Health, Our Priority</h2>
+        <h2 style= "color: red;background-color: green;" >Your Health, Our Priority</h2>
         <p>
             We provide the best medical care to ensure you live a healthy and happy life.
         </p>
