--- a/services.html
+++ b/services.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1 style ="color: red;background-color: blue;" >Our Services</h1>
+        <h1 style ="color: purple;background-color: blue;" >Our Services</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -19,26 +19,29 @@
     </header>
 
     <section id="services">
-        <h2 style ="color: white;background-color: blue;>Our Services</h2>
+        <h2 style ="color: white;background-color: purple;>Our Services</h2>
         <div class="service-list">
             <div class="service-item">
-                <h3  "color: white;background-color: blue;">General Consultation</h3>
+                <h3 style = "color: white;background-color: rgb(255, 0, 187);">General Consultation</h3>
                 <p>
                     Our doctors provide thorough medical evaluations for various health concerns. 
                 </p>
             </div>
             <div class="service-item">
-                <h3 "color: white;background-color: blue;" >Emergency Care</h3>
+                <h4 style = "color: white;background-color: purple;" >Emergency Care</h4>
                 <p>
                     We are equipped to handle medical emergencies 24/7.
                 </p>
             </div>
             <div class="service-item">
-                <h3>Laboratory Services</h3>
+                <h5 style = "color: black; background-color: purple">Laboratory Services</h4>
                 <p>
                     Accurate and timely lab tests to assist in diagnosis and treatment.
-                    Our doctors also do run some test in order to evaluate and determine on what to treat.
                 </p>
+                <p>
+                    Our doctors also do run some test in order to evaluate and determine on what to treat.
+                </p>                   
+
             </div>
             <div class="service-item">
                 <h3>Surgery</h3>
