--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1 "color: white;background-color: blue;">About Us</h1>
+        <h1 "color: blue;background-color: white">About Us</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
