--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </header>
 
     <section id="intro">
-        <h2 style= "color: red;background-color: green;" >Your Health, Our Priority</h2>
+        <h2 style= "color: red;background-color: white;" >Your Health, Our Priority</h2>
         <p>
             We provide the best medical care to ensure you live a healthy and happy life.
         </p>
