--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1"color:white; background-color: blue;">Contact Us</h1>
+        <h1 style = "color:blue; background-color: white;">Contact Us</h1>
         <nav>
             <ul>
                 <li><a href="index.html"> Home </a></li>
@@ -19,7 +19,7 @@
     </header>
 
     <section id="contact">
-        <h2 "color:white;background-color: white;" >Contact Us</h2>
+        <h2 style = "color:white;background-color: white;" >Contact Us</h2>
         <p>Feel free to reach out to us for any inquiries or assistance.Our services are always on time. </p>
         <p>Email: contact@Pwanihospital.com</p>
         <p>Phone: +254 799215167</p>
