--- a/services.html
+++ b/services.html
@@ -28,7 +28,7 @@
                 </p>
             </div>
             <div class="service-item">
-                <h4 style = "color: white;background-color: purple;" >Emergency Care</h4>
+                <h4 style = "color: purple;background-color: white;" >Emergency Care</h4>
                 <p>
                     We are equipped to handle medical emergencies 24/7.
                 </p>
