--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1 "color: blue;background-color: white">About Us</h1>
+        <h1 style = "color: blue;background-color: white">About Us</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -19,7 +19,7 @@
     </header>
 
     <section id="about">
-        <h2 "color: blue;background-color: white;">About Us</h2>
+        <h2 style = "color: blue;background-color: white;">About Us</h2>
         <p>
             Pwani Hospital has been serving the community for over 20 years. 
         </p>
