--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
     </header>
 
     <section id="contact">
-        <h2 style = "color:white;background-color: white;" >Contact Us</h2>
+        <h2 style = "color:blue ;background-color: white;" >Contact Us</h2>
         <p>Feel free to reach out to us for any inquiries or assistance.Our services are always on time. </p>
         <p>Email: contact@Pwanihospital.com</p>
         <p>Phone: +254 799215167</p>
