--- a/services.html
+++ b/services.html
@@ -22,7 +22,7 @@
         <h2 style ="color: white;background-color: purple;>Our Services</h2>
         <div class="service-list">
             <div class="service-item">
-                <h3 style = "color: white;background-color: rgb(255, 0, 187);">General Consultation</h3>
+                <h3 style = "color: blue; background-color: white );">General Consultation</h3>
                 <p>
                     Our doctors provide thorough medical evaluations for various health concerns. 
                 </p>
