--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1 style = "color:blue; background-color: white;">Contact Us</h1>
+        <h1 style = "color:blue; background-color: wheat;">Contact Us</h1>
         <nav>
             <ul>
                 <li><a href="index.html"> Home </a></li>
@@ -28,7 +28,7 @@
 
     <footer>
         <p>
-            &copy; 2024 Pwani Hospital. All rights reserved.
+            &copy; 2025 Pwani Hospital. All rights reserved.
         </p>
     </footer>
 </body>
