Fix HTML formatting in about.html

--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
             Our mission is to provide the best healthcare experience through compassion, innovation, and excellence.
          </p>
         <p>
-            Our medical team consists of highly trained professionals committed to your well-being of the members of the society.   
+            Our medical team consists of highly trained professionals committed to the well-being of the members of the society.   
         </p>
         <img src="about-bg.jpg" alt="image is here" width="200" height="200"/>
     </section>
@@ -40,3 +40,4 @@
 </body>
     
 </html>
+
