Enhance contact.html with additional service details
Updated the contact section to include additional information about services.

--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
 
     <section id="contact">
         <h2 style = "color:blue ;background-color: white;" >Contact Us</h2>
-        <p>Feel free to reach out to us for any inquiries or assistance.Our services are always on time. </p>
+        <p>Feel free to reach out to us for any inquiries or assistance.Our services are always on time and affordable. </p>
         <p>Email: contact@Pwanihospital.com</p>
         <p>Phone: +254 799215167</p>
         <p>Address: 53 Kilifi Street, Kilifi Town</p>
@@ -33,3 +33,4 @@
     </footer>
 </body>
 </html>
+
