Update contact.html with optional footer comment
Added optional comment for page numbers or custom footer.

--- a/contact.html
+++ b/contact.html
@@ -31,6 +31,10 @@
             &copy; 2025 Pwani Hospital. All rights reserved.
         </p>
     </footer>
+
+    //optional: add page numbers or custom footer on each page 
+
 </body>
 </html>
+
 
