--- a/services.html
+++ b/services.html
@@ -65,7 +65,10 @@
     <footer>
         <p>&copy; 2025 Pwani Hospital. All rights reserved.</p>
     </footer>
-    
+
+    //optional: add page numbers or custom footer on each page 
+
 </body>
     
 </html>
+
