Refactor headings in services.html for consistency
Removed inline styles from headings for consistency and improved readability.

--- a/services.html
+++ b/services.html
@@ -66,9 +66,8 @@
         <p>&copy; 2025 Pwani Hospital. All rights reserved.</p>
     </footer>
 
-    //optional: add page numbers or custom footer on each page 
+    <optional: add page numbers or custom footer on each page>
 
 </body>
     
 </html>
-
