--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
         <p>&copy; 2025 Pwani Hospital. All rights reserved.</p>
     </footer>
 
-    //optional: add page numbers or custom footer on each page 
-
+    <optional: add page numbers or custom footer on each page>
 </body>
 </html>
+
 
 
