Restore contact.html to original version
Restored the contact.html file to its original state with all content intact.

--- a/contact.html
+++ b/contact.html
@@ -32,9 +32,10 @@
         </p>
     </footer>
 
-    //optional: add page numbers or custom footer on each page 
-
+  
+    <optional: add page numbers or custom footer on each page>
 </body>
 </html>
+
 
 
